--- a/src/style.kv
+++ b/src/style.kv
@@ -1,3 +1,19 @@
 MDScreenManager:
     Screen:
         id: main
+        MDLabel:
+            text: "To Do List"
+            font_size: 40
+            pos_hint: {'center_x': 0.83,'center_y': 0.9}
+        MDTextField:
+            hint_text: "Rectangle mode"
+            mode: "rectangle"
+            size_hint: 0.8, 0.1
+            font_size: 25
+            pos_hint: {'center_y': 0.8}
+        MDRoundFlatButton:
+            text: "Add"
+            size_hint: 0.1, 0.1
+            font_size: 25
+            text_color: "black"
+            pos_hint: {'center_x': 0.9,'center_y': 0.8}
